# fixedpointmath

./: .gitignore  BUILD.md  INSTALL.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  static.yml  test.yml
lib/fixedpointmath/: README.md  pyproject.toml
lib/fixedpointmath/fixedpointmath/: fixed_point.py  fixed_point_integer_math.py  fixed_point_math.py
lib/fixedpointmath/tests/: test_fp_class.py  test_fp_integer_math.py  test_fp_math.py
