[project]
name = "fixedpointmath"
version = "0.1.6"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
description = "Fixed-point arithmetic and type that mirrors popular Solidity implementations"
readme = "README.md"
requires-python = ">=3.8, <=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/delvtech/fixedpointmath"
"Bug Tracker" = "https://github.com/delvtech/fixedpointmath/issues"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pyright]
venv = ".venv"
venvPath = "./"
# TODO fix this, throwing errors in fixed_point.py
typeCheckingMode = "strict"
exclude = [
    ".venv",
    ".vscode",
    "docs",
]
reportIncompatibleMethodOverride = false
reportUnnecessaryIsInstance = false
